<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_menu_portfolio"
            android:title="@string/nav_portfolio"/>

        <item
            android:id="@+id/nav_experience"
            android:icon="@drawable/ic_menu_previous_experience"
            android:title="@string/nav_previous_experience"/>

        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_menu_tools"
            android:title="@string/nav_skills"/>

        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_menu_education"
            android:title="@string/nav_education"/>

        <item
            android:id="@+id/nav_contact_me"
            android:icon="@drawable/ic_menu_contact_me"
            android:title="@string/nav_contact_me"/>
    </group>

</menu>
