<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/Generic.ScrollView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/main_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Generic.HugeTitle"/>

        <TextView
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:text="@string/main_about_me_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Generic.Content1"/>

        <TextView
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/main_motivation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Generic.Title1.Bold"/>

        <TextView
            android:text="@string/main_motivation_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Generic.Content1"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>