<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ojeda.diego.myresume.home.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/header_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="center"
                android:layout_gravity="center"
                android:src="@mipmap/header"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/margin_large"
        fab:fab_addButtonColorPressed="?attr/colorAccent"
        fab:fab_addButtonColorNormal="?attr/colorAccent"
        fab:fab_addButtonSize="normal"
        fab:fab_labelStyle="@style/FAB.Labels"
        fab:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/menu_fab_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorPrimaryLight"
            fab:fab_icon="@drawable/ic_fab_linkedin"
            fab:fab_addButtonSize="mini"
            fab:fab_title="@string/fab_linkedin"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/menu_fab_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorPrimaryLight"
            fab:fab_icon="@drawable/ic_fab_facebook"
            fab:fab_addButtonSize="mini"
            fab:fab_title="@string/fab_facebook"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/menu_fab_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorPrimaryLight"
            fab:fab_icon="@drawable/ic_fab_twitter"
            fab:fab_addButtonSize="mini"
            fab:fab_title="@string/fab_twitter"
            />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
